--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -214,7 +214,7 @@
             <span class="fa arrow"></span></a>
             <ul class="nav nav-second-level">
               <li id="enquiryform">
-              <a href="" data-toggle="modal" data-target="#pre-apps" on-click="Fnpreapp">Enquiry Form</a>
+              <a href="" data-backdrop="static" data-keyboard="false" aria-hidden="true" data-toggle="modal" data-target="#pre-apps" on-click="Fnpreapp">Enquiry Form</a>
               </li>
               <!-- <li id="updateenquiry">
               <a href="" on-click="Fnpreappupdate">Update Enquiry</a>
@@ -336,6 +336,9 @@
         <li id="feepayment">
             <a id="feepayment" href="#" aria-hidden="true" data-toggle="modal" on-click="FnFeePayment"><i class="fa fa-money fa-fw"></i> Fee Payment<span class="fa arrow"></span></a>
             <ul class="nav nav-second-level">
+              <li id="feecollection">
+              <a href="" aria-hidden="true" data-toggle="modal" data-target="#togglefeecollection" on-click="FnFeeCollection">Fee Collection</a>
+              </li>
               <li id="applicationfee">
               <a href="" aria-hidden="true" data-toggle="modal" data-target="#toggleprospectousfee" on-click="FnProspect">Application Fee</a>
               </li>
@@ -832,6 +835,24 @@
       </div>
     </div>
 
+    <div class="modal fade bd-example-modal-lg" id="togglefeecollection" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" id ="fee-dialog">
+        <div class="modal-content" id="fee-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h4 class="center-block event-title" id="">
+             Fee Collection
+            </h4>
+          </div>
+          <div class="modal-body">
+            <fee-card></fee-card>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="modal fade bd-example-modal-lg" id="toggleprospectousfee" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg" id ="fee-dialog">
         <div class="modal-content" id="fee-content">
@@ -1064,6 +1085,10 @@
         this.hidereportmenu=true;
         localStorage.setItem('curr_sess_page','');
       },
+      // FnFeeCollection:function(){
+      //   document.querySelector('app-list').setPage("fee-card","Fee Collection");
+      //   document.querySelector('fee-card').FnRefresh();
+      // },
       FnSelectSchool:function(e){
         localStorage.setItem('curr_sess_page','');
         var schoolname=e.target.selectedItem.textContent.trim();
@@ -1213,7 +1238,7 @@
       followupdashboard:function(){
         localStorage.setItem('curr_sess_page','');
         this.$.followupservice.getfollowupcount();
-        document.querySelector('app-list').setPage("follow-up");
+        document.querySelector('app-list').setPage("follow-up","Dashboard");
       },
       FnRefresh:function(){
         localStorage.setItem('curr_sess_page','');
